--- a/index.html
+++ b/index.html
@@ -6,10 +6,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/styles/reset.css">
+    <link rel="stylesheet" href="./assets/styles/styles.css">
 </head>
 
 <body>
-    <h1>Hello</h1>
+
+    <div class="wrapper">
+        <div class="accordion">
+            <!-- panel-1 -->
+            <div class="accordion__panel">
+                <h2 class="panel1-heading">
+                    <button class="accordion__trigger" aria-controls="panel1-content" aria-expanded="true">
+                        <span id="panel1-title">Boating</span>
+                        <!-- icon -->
+                    </button>
+                </h2>
+
+                <div class="accordion__content" id="panel1-content" aria-labelledby="panel1-heading" role="region"
+                    aria-hidden="true">
+                    <p>As a global agricultural merchant and processor we help provide sustenance for a growing
+                        population, working to create fair and sustainable value for the benefit of current and
+                        future generations.
+                    </p>
+                    <img class="accordion__img"
+                        src="https://images.unsplash.com/photo-1685013639823-62388d0e9e46?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=805&q=80"
+                        alt="">
+                </div>
+            </div>
+            <!-- panel-2 -->
+            <div class="accordion__panel">
+                <h2 class="panel2-heading">
+                    <button class="accordion__trigger" aria-controls="panel2-content" aria-expanded="false">
+                        <span id="panel1-title">Boating</span>
+                        <!-- icon -->
+                    </button>
+                </h2>
+
+                <div class="accordion__content" id="panel2-content" aria-labelledby="panel2-heading" role="region">
+                    <p>As a global agricultural merchant and processor we help provide sustenance for a growing
+                        population, working to create fair and sustainable value for the benefit of current and
+                        future generations.
+                    </p>
+                    <img class="accordion__img"
+                        src="https://images.unsplash.com/photo-1684868623430-aa353b5da28d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1228&q=80"
+                        alt="">
+                </div>
+            </div>
+            <!-- panel-3 -->
+            <div class="accordion__panel">
+                <h2 class="panel3-heading">
+                    <button class="accordion__trigger" aria-controls="panel3-content" aria-expanded="false">
+                        <span id="panel1-title">Boating</span>
+                        <!-- icon -->
+                    </button>
+                </h2>
+
+                <div class="accordion__content" id="panel3-content" aria-labelledby="panel3-heading" role="region">
+                    <p>As a global agricultural merchant and processor we help provide sustenance for a growing
+                        population, working to create fair and sustainable value for the benefit of current and
+                        future generations.
+                    </p>
+                    <img class="accordion__img"
+                        src="https://images.unsplash.com/photo-1685013642193-c66a498195c6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=436&q=80"
+                        alt="">
+                </div>
+            </div>
+            <!-- panel-4 -->
+            <div class="accordion__panel">
+                <h2 class="panel4-heading">
+                    <button class="accordion__trigger" aria-controls="panel4-content" aria-expanded="false">
+                        <span id="panel1-title">Boating</span>
+                        <!-- icon -->
+                    </button>
+                </h2>
+
+                <div class="accordion__content" id="panel4-content" aria-labelledby="panel4-heading" role="region">
+                    <p>As a global agricultural merchant and processor we help provide sustenance for a growing
+                        population, working to create fair and sustainable value for the benefit of current and
+                        future generations.
+                    </p>
+                    <img class="accordion__img"
+                        src="https://images.unsplash.com/photo-1685013639823-62388d0e9e46?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=805&q=80"
+                        alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
