--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,60 +19,118 @@
 <body>
 
     <div class="wrapper">
-        <div class="accordion">
-            <!-- panel-1 -->
-            <div class="accordion__panel">
-                <h2 class="panel1-heading">
-                    <button class="accordion__trigger" aria-controls="panel1-content" aria-expanded="true">
-                        <span id="panel1-title">Purpose</span>
-                        <i class="fa-solid fa-plus accordion__icon"></i>
-                    </button>
-                </h2>
-
-                <div class="accordion__content" id="panel1-content" aria-labelledby="panel1-heading" role="region"
-                    aria-hidden="true">
-                    <p>As a global agricultural merchant and processor we help provide sustenance for a growing
-                        population, working to create fair and sustainable value for the benefit of current and
-                        future generations.
-                    </p>
-                    <img class="accordion__img" src="./assets/images/home_page_1.jpg" alt="">
+        <div class="top"></div>
+        <header>
+            <div class="navigation-primary">
+                <div class="navigation-primary__container">
+                    <div class="navigation-primary__inner">
+                        <!-- logo -->
+                        <a href="#!" class="logo">
+                            <img class="logo__img" src="./assets/images/logo-myvina.png" alt="logo myvina">
+                        </a>
+                        <!-- Navbar -->
+                        <nav class="navbar">
+                            <ul class="navbar__list" role="list">
+                                <li class="navbar__item">
+                                    <a href="#!" class="navbar__link">WHO WE ARE</a>
+                                </li>
+                                <li class="navbar__item">
+                                    <a href="#!" class="navbar__link">WHAT WE DO</a>
+                                </li>
+                                <li class="navbar__item">
+                                    <a href="#!" class="navbar__link">
+                                        SUSTAINABILITY
+                                    </a>
+                                </li>
+                                <li class="navbar__item">
+                                    <a href="#!" class="navbar__link">NEWS & INSIGHTS</a>
+                                </li>
+                                <li class="navbar__item">
+                                    <a href="#!" class="navbar__link">
+                                        CAREERS
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <!-- Header action -->
+                        <div class="header-action">
+                            <a href="#!" class="header-action__link">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <!-- panel-2 -->
-            <div class="accordion__panel">
-                <h2 class="panel2-heading">
-                    <button class="accordion__trigger" aria-controls="panel2-content" aria-expanded="false">
-                        <span id="panel1-title">Products</span>
-                        <i class="fa-solid fa-plus accordion__icon"></i>
-                    </button>
-                </h2>
+            <div class="accordion">
+                <!-- panel-1 -->
+                <div class="accordion__panel">
+                    <h2 class="panel1-heading">
+                        <button class="accordion__trigger" aria-controls="panel1-content" aria-expanded="true">
+                            <span id="panel1-title">Purpose</span>
+                            <i class="fa-solid fa-plus accordion__icon"></i>
+                        </button>
+                    </h2>
 
-                <div class="accordion__content" id="panel2-content" aria-labelledby="panel2-heading" role="region">
-                    <p>As a global agricultural merchant and processor we help provide sustenance for a growing
-                        population, working to create fair and sustainable value for the benefit of current and
-                        future generations.
-                    </p>
-                    <img class="accordion__img" src="./assets/images/home_page_2.jpg" alt="">
+                    <div class="accordion__content" id="panel1-content" aria-labelledby="panel1-heading" role="region"
+                        aria-hidden="true">
+                        <div class="inner">
+                            <span class="inner__header">GUIDED BY OUR</span>
+                            <h2 class="inner__heading">Purpose</h2>
+                            <p class="inner__desc">As a global agricultural merchant and processor we help provide
+                                sustenance for a growing population, working to create fair and sustainable value for
+                                the
+                                benefit of current and future generations.</p>
+                            <span class="inner__navigation">DISCOVER WHO WE ARE</span>
+                        </div>
+                        <img class="accordion__img" src="./assets/images/home_page_1.jpg" alt="">
+                    </div>
+                </div>
+                <!-- panel-2 -->
+                <div class="accordion__panel">
+                    <h2 class="panel2-heading">
+                        <button class="accordion__trigger" aria-controls="panel2-content" aria-expanded="false">
+                            <span id="panel1-title">Products</span>
+                            <i class="fa-solid fa-plus accordion__icon"></i>
+                        </button>
+                    </h2>
+
+                    <div class="accordion__content" id="panel2-content" aria-labelledby="panel2-heading" role="region">
+                        <div class="inner">
+                            <span class="inner__header">GUIDED BY OUR</span>
+                            <h2 class="inner__heading">Purpose</h2>
+                            <p class="inner__desc">As a global agricultural merchant and processor we help provide
+                                sustenance for a growing population, working to create fair and sustainable value for
+                                the
+                                benefit of current and future generations.</p>
+                            <span class="inner__navigation">DISCOVER WHO WE ARE</span>
+                        </div>
+                        <img class="accordion__img" src="./assets/images/home_page_2.jpg" alt="">
+                    </div>
+                </div>
+                <!-- panel-3 -->
+                <div class="accordion__panel">
+                    <h2 class="panel3-heading">
+                        <button class="accordion__trigger" aria-controls="panel3-content" aria-expanded="false">
+                            <span id="panel1-title">People</span>
+                            <i class="fa-solid fa-plus accordion__icon"></i>
+                        </button>
+                    </h2>
+
+                    <div class="accordion__content" id="panel3-content" aria-labelledby="panel3-heading" role="region">
+                        <div class="inner">
+                            <span class="inner__header">GUIDED BY OUR</span>
+                            <h2 class="inner__heading">Purpose</h2>
+                            <p class="inner__desc">As a global agricultural merchant and processor we help provide
+                                sustenance for a growing population, working to create fair and sustainable value for
+                                the
+                                benefit of current and future generations.</p>
+                            <span class="inner__navigation">DISCOVER WHO WE ARE</span>
+                        </div>
+                        <img class="accordion__img" src="./assets/images/home_page_3.jpg" alt="">
+                    </div>
                 </div>
             </div>
-            <!-- panel-3 -->
-            <div class="accordion__panel">
-                <h2 class="panel3-heading">
-                    <button class="accordion__trigger" aria-controls="panel3-content" aria-expanded="false">
-                        <span id="panel1-title">People</span>
-                        <i class="fa-solid fa-plus accordion__icon"></i>
-                    </button>
-                </h2>
-
-                <div class="accordion__content" id="panel3-content" aria-labelledby="panel3-heading" role="region">
-                    <p>As a global agricultural merchant and processor we help provide sustenance for a growing
-                        population, working to create fair and sustainable value for the benefit of current and
-                        future generations.
-                    </p>
-                    <img class="accordion__img" src="./assets/images/home_page_3.jpg" alt="">
-                </div>
-            </div>
-        </div>
+        </header>
     </div>
 
     <script src="./assets/js/app.js"></script>
